# helloai

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  cleanup.sh  deploy-agents.sh  docker-compose.yaml  main.py  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt  tree.txt  verify-all-agents.sh
.archive/: tailwindwd.config.ts
.claude/: settings.json
X/: README.md  agent_x.py  authenticate.py  chatgpt_agent_x.py  chatgpt_x_post_bot.py  follow_unfollow.py  generate.py  generate_post.py  get_user_id.py  gpt_agent_x.py  helloai.py  helloai_v1.py  image_generator.py  post_bot.py  post_generator.py  user_admin_bot.py  users.db
__tests__/: data.test.ts
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
data/: agent.py  articles.json  categories.json  index.ts  local_leaderboard.json  models.json  open_weight_models.json  recommend.ts  site.json  types.ts
docs/: architecture.md  pay-loop.md
frontend/: dump.rdb  main.py  tree.txt
holder/: mongodb-restore-job.yaml
lib/: cors.ts  request-logger.ts
ollama/: Dockerfile  Makefile  docker-compose.yaml
routers/: home.py
scripts/: add_article.py  arena.py  config.py  deploy.py  generate_article.py  requirements.txt  test_arena.py  update_leaderboard.py  utils.py  weekly_update.py
services/: agent_service.py  package_service.py  user_service.py
static/: script.js  story_script.js  style.css
templates/: index copy.html  index.html  index.pt  start.html  story.html
(+109 files in other folders)
